--- a/VaultBlazor/Components/Layout/NavMenu.razor
+++ b/VaultBlazor/Components/Layout/NavMenu.razor
@@ -13,5 +13,10 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Encrypt / Decrypt file
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Login" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Login
+            </NavLink>
+        </div>
     </nav>
 </div>
